# custom-discordpy

./: pyproject.toml
newpy/discord/: client.py  http.py
